Merged in feature/PAT-681/_contributors_can_only_modify_collab_opport_they_added (pull request #566)
Feature/PAT-681/ contributors can only modify collab opport they added
On infrastructure and forward work plans

Approved-by: Daniel Ashworth